--- a/.gitignore
+++ b/.gitignore
@@ -176,6 +176,7 @@ cython_debug/
 # Project specific
 data/
 logs/
+private/
 *.db
 *.sqlite
 *.sqlite3
@@ -189,6 +190,7 @@ statements/
 config.yaml
 secrets.yaml
 *.env
+.env.totals
 
 # OS specific
 .DS_Store
@@ -197,4 +199,6 @@ secrets.yaml
 .Spotlight-V100
 .Trashes
 ehthumbs.db
-Thumbs.db 
+Thumbs.db
+
+scripts/temp/
