--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "py-statements-parser"
-version = "0.1.1"
+version = "1.0.0"
 description = "A Python application to process statements from various financial institutions"
 readme = "README.md"
 license = { text = "MIT" }
@@ -11,11 +11,13 @@ authors = [
 dependencies = [
     "typer>=0.15.1",
     "pydantic>=2.10.4",
-    "pymupdf>=1.23.0",
+    "pdfplumber>=0.10.0",
     "pandas>=2.0.0",
     "openpyxl>=3.1.0",
     "python-dateutil>=2.8.0",
     "loguru>=0.7.0",
+    "bump-my-version>=1.2.1",
+    "PyYAML>=6.0",
 ]
 
 [project.optional-dependencies]
@@ -36,6 +38,7 @@ dev = [
 
 [project.scripts]
 py-statements-parser = "src.py_statements_parser.main:app"
+bump-version = "bumpversion.cli:main"
 
 [build-system]
 requires = ["hatchling"]
@@ -44,6 +47,8 @@ build-backend = "hatchling.build"
 [tool.ruff]
 target-version = "py310"
 line-length = 120
+
+[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
@@ -76,4 +81,21 @@ addopts = [
     "--cov=src",
     "--cov-report=term-missing",
     "--cov-report=html",
-] 
+]
+
+[tool.bump-my-version]
+current_version = "1.0.0"
+commit = true
+tag = true
+parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
+serialize = ["{major}.{minor}.{patch}"]
+
+[[tool.bump-my-version.file]]
+filename = "pyproject.toml"
+search = "version = \"{current_version}\""
+replace = "version = \"{new_version}\""
+
+[[tool.bump-my-version.file]]
+filename = "pyproject.toml"
+search = "current_version = \"{current_version}\""
+replace = "current_version = \"{new_version}\""
