--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "py-statements-parser"
-version = "1.0.0"
+version = "1.0.1"
 description = "A Python application to process statements from various financial institutions"
 readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.10"
 authors = [
-    { name = "Your Name", email = "your.email@example.com" }
+    { name = "Chakradhar Sirigiri", email = "119761169+chakri-sirigiri@users.noreply.github.com" }
 ]
 dependencies = [
     "typer>=0.15.1",
@@ -84,7 +84,7 @@ addopts = [
 ]
 
 [tool.bump-my-version]
-current_version = "1.0.0"
+current_version = "1.0.1"
 commit = true
 tag = true
 parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
